Bug 1037597 - Fix some races in AudioSink.cpp. r=kinetik, a=sledru